--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ Django==3.2.8
 django-crispy-forms==1.13.0
 django-environ==0.8.1
 django-heroku==0.0.0
+gunicorn==20.1.0
 psycopg2-binary==2.9.1
 pytz==2021.3
 sqlparse==0.4.2
